--- a/style_bs_josie.css
+++ b/style_bs_josie.css
@@ -1,3 +1,19 @@
+.accessibility{
+	position: absolute;
+	left: -99999px;
+	height: 10px;
+	width: 10px
+}
+
+#skip{
+  position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+  margin-left: 0;
+	text-align: center;
+	list-style: outside none;
+}
 body {
 	background-color: white;
 	color: black;
@@ -9,14 +25,38 @@ body {
 	width: 960px;
 	margin: 0 auto;
 }
-/*.navbar {
+.navbar-default{
+	background-color: #3c948b;
+}
+.navbar-default .navbar-brand {
+    color: white !important;
+}
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: #555 !important;
+    background-color: #e7e7e7;
+}
+.navbar-default .navbar-nav>li>a {
+    color: white !important;
+}
+@media (min-width: 48em){
+.navbar-nav {
+    float: right !important;
+    margin: 0;
+    margin-top: 5px !important;
+}
+}
+/*@media all and (min-width: 48em) {
+	.navbar{
+		float: right
+	}
+}
+
+.navbar {
 	margin-top: 50px;
 	border: 0px solid transparent !important;
 	background-color: white !important;
 }
-.navbar .navbar-default{
 
-}
 .navbar-collapse {
 	background-color: white;
 	float: right;
